crates/keel-mcp/tests/snapshots/snapshots__keel_activity_bad_entity.snap
---
source: crates/keel-mcp/tests/snapshots.rs
expression: cases
---
{
  "not_a_reference": {
    "error": {
      "code": -32602,
      "message": "argument `entity`: `the login one` is neither an id nor a readable reference. Expected: a prefixed ULID such as `tsk_01H8…`, or a readable reference such as `KEEL-42` for a task or `KEEL-B12` for a decision"
    }
  },
  "well_formed_but_unknown": {
    "error": {
      "code": -32602,
      "message": "argument `entity`: `TASK-42` does not name anything in this store. Expected: a prefixed ULID such as `tsk_01H8…`, or a readable reference such as `KEEL-42` for a task or `KEEL-B12` for a decision"
    }
  }
}
