crates/keel-mcp/tests/snapshots/snapshots__keel_activity_entity.snap
---
source: crates/keel-mcp/tests/snapshots.rs
assertion_line: 198
expression: result
---
{
  "content": [
    {
      "text": "2 change(s):\n  [time] claude created — created task “Backfill closed_at”\n  [time] claude status_changed — status todo → in_progress",
      "type": "text"
    }
  ],
  "isError": false,
  "structuredContent": {
    "cursor": null,
    "events": [
      {
        "action": "created",
        "actor": "claude",
        "after": null,
        "before": null,
        "created_at": "[timestamp]",
        "entity_id": "[id]",
        "entity_type": "task",
        "field": null,
        "id": "[id]",
        "meta": null,
        "project_id": "[id]",
        "session_id": null,
        "summary": "created task “Backfill closed_at”",
        "surface": null
      },
      {
        "action": "status_changed",
        "actor": "claude",
        "after": "in_progress",
        "before": "todo",
        "created_at": "[timestamp]",
        "entity_id": "[id]",
        "entity_type": "task",
        "field": "status",
        "id": "[id]",
        "meta": null,
        "project_id": "[id]",
        "session_id": null,
        "summary": "status todo → in_progress",
        "surface": null
      }
    ],
    "total": 2,
    "truncated": false
  }
}
