crates/keel-mcp/tests/snapshots/snapshots__keel_get.snap
---
source: crates/keel-mcp/tests/snapshots.rs
expression: result
---
{
  "content": [
    {
      "text": "1 artifact(s):\n  [task] Dedupe usage events by idempotency key — HARB-1",
      "type": "text"
    }
  ],
  "isError": false,
  "structuredContent": {
    "artifacts": [
      {
        "entity": {
          "archived": false,
          "audit": {
            "archived_at": null,
            "created_at": "[timestamp]",
            "created_by": "claude",
            "session_id": "ses_snapshot",
            "surface": null,
            "updated_at": "[timestamp]",
            "updated_by": "claude",
            "version": 1
          },
          "body": null,
          "claimed_at": null,
          "claimed_by": null,
          "close_message": null,
          "close_reason": null,
          "closed_at": null,
          "evidence": [],
          "external_refs": [],
          "id": "[id]",
          "idempotency_key": "[hash]",
          "kind": "task",
          "labels": [],
          "milestone_id": null,
          "number": 1,
          "parent_id": null,
          "priority": "p2",
          "project_id": "[id]",
          "rank": 1.0,
          "status": "todo",
          "summary": "A row this test needs in the store.",
          "title": "Dedupe usage events by idempotency key",
          "type": "task",
          "version": 1
        },
        "neighbours": []
      }
    ],
    "not_found": []
  }
}
